--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,13 +13,19 @@ dl, dd, ol, ul, figure {
 body {
   font: 300 16px/1.35 "Raleway", Helvetica, sans-serif;
   color: #111;
-  background-color: #fdfdfd;
+  background-color: #FCF5E5;
   -webkit-text-size-adjust: 100%;
   -webkit-font-feature-settings: "kern" 1;
   -moz-font-feature-settings: "kern" 1;
   -o-font-feature-settings: "kern" 1;
   font-feature-settings: "kern" 1;
   font-kerning: normal; }
+
+li {
+  display: inline;
+  float: right;
+  padding: 14px 16px;
+}
 
 /**
  *  * Set `margin-bottom` to maintain vertical rhythm
@@ -131,22 +137,44 @@ pre {
     padding-right: 0;
     padding-left: 0; }
 
-/**
- *  * Wrapper
- *   */
+.buttons {
+  text-align: center;
+  margin-top: 0.5em;
+}
+
 .wrapper {
-  max-width: -webkit-calc(800px - (30px * 2));
-  max-width: calc(800px - (30px * 2));
+  max-width: calc(1000px - (30px * 2));
   margin-right: auto;
   margin-left: auto;
-  padding-right: 30px;
-  padding-left: 30px; }
-  @media screen and (max-width: 800px) {
+  padding-right: 10px;
+  padding-left: 10px; }
+  @media screen and (max-width: 1500px) {
     .wrapper {
-      max-width: -webkit-calc(800px - (30px));
-      max-width: calc(800px - (30px));
+      max-width: calc(1000px - (30px));
       padding-right: 15px;
-      padding-left: 15px; } }
+      padding-left: 15px; } } 
+
+/**
+ *  * Wrapper
+ *   
+.wrapper {
+  max-width: -webkit-calc(1500px - (15px * 2));
+  max-width: calc(1500px - (30px * 2));
+  margin-right: auto;
+  margin-left: auto;
+  padding-right: 10px;
+  padding-left: 10px; }
+  @media screen and (max-width: 1500px) {
+    .wrapper {
+      max-width: -webkit-calc(1500px - (30px));
+      max-width: calc(1500px - (30px));
+      padding-right: 15px;
+      padding-left: 15px; } } 
+
+/*.wrapper {
+  max-width: calc(1500px - (30px * 2));
+  margin-right: auto;
+  margin-left: auto; } */
 
 /**
  *  * Clearfix
@@ -172,6 +200,18 @@ pre {
   font-size: 18px;
   font-weight: 300;
   padding-top: 0; }
+
+.float-container {
+    padding-bottom: 2em; 
+  }
+
+.float-child-left {
+    width: 45%;
+    float: left; } 
+
+.float-child-right {
+    width: 55%;
+    float:left; }
 
 .home {
   padding-bottom: 2em; }
@@ -636,5 +676,3 @@ section {
 
 p span {
   display: block; }
-
-
