--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -810,12 +810,12 @@ p span {
 .ta-experience {
   list-style-type: disc;
   padding-left: 20px;
-  margin: 1em 0;
+  margin: 0.5em 0;
 }
 
 .ta-experience li {
-  margin-bottom: 1.2em;
-  line-height: 1.6;
+  margin-bottom: 0.4em; /* reduced gap between items */
+  line-height: 1.3;     /* tighter line spacing */
 }
 
 /* Keep strong and em inline, no extra styling */
