--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -841,13 +841,13 @@ h2 {
   display: table;
   clear: both;
 }
-
+/* 
 
 .paper,
 .training-program {
   margin: 0;
   padding: 0 0 0 2em; /* left indent */
-  text-indent: -1em;  /* hanging indent */
-  line-height: 1.6;
+  /* text-indent: -1em;  /* hanging indent */
+  /* line-height: 1.6;
   display: block;
-}
+} */ 
