--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -856,7 +856,8 @@ h2 {
 /* Force numbers for research interests list, override global ol rules */
 ol.research-interests {
   list-style: decimal;       /* use numbers */
-  padding-left: 1.0em;       /* spacing between number and text */
+  /* padding-left: 1.0em;       /* spacing between number and text */
+  padding-left: 0;    
   margin-left: auto;
   margin-right: auto;         /* center the list block horizontally */
   text-align: center;           /* left-align text relative to numbers */
